[package]
name = "rust-dns-hackery"
version = "0.1.0"
authors = ["Ryan De Villa <ryan.devilla@shopify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
trust-dns-client = "0.19.2"
trust-dns-proto = "0.19.2"
trust-dns-server = "0.19.2"

[dependencies.tokio]
version = "0.2.11"
features = [ "tcp", "io-util" ]
